Render AI replies with Markdown via marked CDN

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
     </div>
     <p class="hint">Hinweis: Antworten generiert eine KI. Keine medizinische Beratung.</p>
   </div>
+  <!-- Markdown-Renderer -->
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
   <script src="./app.js" type="module"></script>
 </body>
 </html>
