Render AI replies with Markdown via marked CDN

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>medicIQ Lernhilfe</h1>
+    <h1>medicIQ KI-Lernhilfe</h1>
 
     <!-- WICHTIG: wieder die alten, erwarteten IDs -->
     <div id="chat-box">
@@ -20,10 +20,10 @@
       </div>
     </div>
 
-    <p class="hint">
-      Hinweis: Antworten generiert eine KI. Keine medizinische Beratung. <br />
-      Beachte: Unterschiedliche Rettungsdienstschulen haben eigene Lehraussagen – diese haben stets Vorrang.
-    </p>
+    <p class="footer-note">
+  Hinweis: Antworten generiert eine KI. Keine medizinische Beratung.<br>
+  <span class="dim">Beachte: Unterschiedliche Rettungsdienstschulen haben eigene Lehraussagen – diese haben stets Vorrang.</span>
+</p>
   </div>
 
   <!-- Markdown Renderer (für schöne Absätze, Listen etc.) -->
