--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <script defer src="./app.js"></script>
 </head>
 <body>
+    <div class="wrap">
+    <h1>medicIQ Lernhilfe</h1>
   <main class="page">
     <section class="chat-container">
       <div id="chat-box" class="chat-box" aria-live="polite" aria-label="Chat-Verlauf"></div>
