--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
   <script defer src="./app.js"></script>
 </head>
 <body>
-    <div class="wrap">
-    <h1>medicIQ Lernhilfe</h1>
+    
   <main class="page">
     <section class="chat-container">
+        <h1>medicIQ KI-Lernhilfe</h1>
       <div id="chat-box" class="chat-box" aria-live="polite" aria-label="Chat-Verlauf"></div>
 
       <div class="input-row">
