click-only UI (XABCDE + Queue)

--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,32 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>medicIQ – Fallbeispiele</title>
+  <title>medicIQ – Fallbeispiele (Click-UI)</title>
 
   <link rel="stylesheet" href="./style.css" />
-  <script defer src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <!-- kein Freitext mehr, daher kein marked nötig -->
   <script defer src="./app.js"></script>
 </head>
 <body>
   <main class="page">
-    <section class="chat-container" aria-label="Fallbeispiele und Chat">
+    <section class="chat-container" aria-label="Fallbeispiele (Click-UI)">
       <h1>medicIQ – Fallbeispiele</h1>
 
-      <!-- Status: aktueller Fall + Score -->
+      <!-- Status -->
       <div class="status-row" role="status" aria-live="polite">
         <div id="caseStatus">Kein Fall aktiv.</div>
         <div id="caseScore">Score: 0</div>
       </div>
 
-      <!-- Vitals kompakt -->
+      <!-- Vitals -->
       <div class="vitals" aria-label="Vitalwerte">
-        <span><strong>RR</strong> <span id="vRR">–</span></span>
+        <span><strong>RR</strong>   <span id="vRR">–</span></span>
         <span><strong>SpO₂</strong> <span id="vSpO2">–</span></span>
-        <span><strong>AF</strong> <span id="vAF">–</span></span>
+        <span><strong>AF</strong>   <span id="vAF">–</span></span>
         <span><strong>Puls</strong> <span id="vPuls">–</span></span>
-        <span><strong>BZ</strong> <span id="vBZ">–</span></span>
+        <span><strong>BZ</strong>   <span id="vBZ">–</span></span>
         <span><strong>Temp</strong> <span id="vTemp">–</span></span>
-        <span><strong>GCS</strong> <span id="vGCS">–</span></span>
+        <span><strong>GCS</strong>  <span id="vGCS">–</span></span>
       </div>
 
       <!-- Fortschritt XABCDE -->
@@ -41,30 +41,47 @@
         <div class="chip" data-step="E">E</div>
       </div>
 
-      <!-- Hinweisbox -->
+      <!-- Hinweis -->
       <div id="hintCard" class="hint hidden" aria-live="polite">
         <strong>Nächster Schritt:</strong>
         <div id="hintText">—</div>
       </div>
 
-      <!-- Chat-Verlauf -->
-      <div id="chat-box" class="chat-box" aria-live="polite" aria-label="Chat-Verlauf"></div>
-
-      <!-- Eingabezeile -->
-      <div class="input-row">
-        <input
-          id="msg"
-          type="text"
-          placeholder="Schreibe ganze Sätze: z. B. „Ich prüfe die Sättigung und messe den Blutdruck.“"
-          autocomplete="off"
-          aria-label="Eingabe für Anweisungen/Fragen" />
-        <button id="send" class="btn">Senden</button>
+      <!-- Action Tabs -->
+      <div class="tabs">
+        <button class="tab active" data-tab="X">X – Exsanguination</button>
+        <button class="tab" data-tab="A">A – Airway</button>
+        <button class="tab" data-tab="B">B – Breathing</button>
+        <button class="tab" data-tab="C">C – Circulation</button>
+        <button class="tab" data-tab="D">D – Disability</button>
+        <button class="tab" data-tab="E">E – Exposure</button>
       </div>
 
-      <!-- Aktionen -->
+      <!-- Action Panel -->
+      <div id="panel" class="action-grid" aria-live="polite"></div>
+
+      <!-- Queue -->
+      <div class="queue card">
+        <div class="queue-head">
+          <div class="h">Geplante Maßnahmen</div>
+          <div class="q-right">
+            <button id="btnClearQueue" class="btn secondary">Leeren</button>
+            <button id="btnRunQueue" class="btn">Ausführen</button>
+          </div>
+        </div>
+        <ul id="queueList" class="queue-list"></ul>
+      </div>
+
+      <!-- Feedback / Log (nur Antworten der Engine) -->
+      <div class="card chat-wrap">
+        <div class="h">Feedback</div>
+        <div id="chatLog" class="chat-log"></div>
+      </div>
+
+      <!-- Global-Aktionen -->
       <div class="action-row">
-        <button id="startCase" class="btn secondary" aria-label="Neuen Fall starten">Neuen Fall starten</button>
-        <button id="finishCase" class="btn danger" aria-label="Fall beenden">Fall beenden</button>
+        <button id="startCase" class="btn secondary">Neuen Fall starten</button>
+        <button id="finishCase" class="btn danger">Fall beenden</button>
       </div>
     </section>
 
