--- a/public/index.html
+++ b/public/index.html
@@ -261,6 +261,22 @@
     <button id="o2Cancel" class="btn secondary">Abbrechen</button>
   </div>
 </div>
+<!-- ... existing code ... -->
+
+<!-- Notarzt Modal (NEU) -->
+<div id="modalNA" class="modal hidden">
+  <div class="modal-head">Notarzt nachfordern</div>
+  <div class="modal-body form-grid">
+    <p>Bitte Begründung angeben (Indikation):</p>
+    <textarea id="naReason" rows="3" placeholder="z. B. Analgesiebedarf, hämodynamische Instabilität..."></textarea>
+  </div>
+  <div class="modal-actions">
+    <button id="naOk" class="btn">Nachfordern</button>
+    <button id="naCancel" class="btn secondary">Abbrechen</button>
+  </div>
+</div>
+
+<!-- ... existing code ... -->
 <!-- ===== END MODALS ===== -->
 
 </body>
